2010-08-06  Jian Li  <jianli@chromium.org>

        Fix chromium build break.

        * inspector/InspectorDebuggerAgent.h:

2010-08-06  Dirk Schulze  <krit@webkit.org>

        Not reviewed. Sort XCode project file.

        * WebCore.xcodeproj/project.pbxproj:

2010-08-06  Jessie Berlin  <jberlin@apple.com>

        Roll out http://trac.webkit.org/changeset/64801, which broke the Safari Windows Build.
        Unreviewed.

        * accessibility/AXObjectCache.h:
        * accessibility/AccessibilityARIAGrid.h:
        * accessibility/AccessibilityListBoxOption.h:
        * accessibility/AccessibilityObject.h:
        * accessibility/AccessibilityRenderObject.h:
        * accessibility/AccessibilityTable.h:
        * bindings/cpp/WebDOMCString.h:
        * bindings/cpp/WebDOMString.h:
        * bindings/gobject/ConvertToUTF8String.h:
        * bindings/js/DOMWrapperWorld.h:
        * bindings/js/JSDOMBinding.h:
        * bindings/js/JSDOMWindowBase.h:
        * bindings/js/JSMessagePortCustom.h:
        * bindings/js/JavaScriptCallFrame.h:
        * bindings/js/ScriptController.h:
        * bindings/js/ScriptProfile.h:
        * bindings/js/ScriptSourceProvider.h:
        * bindings/js/ScriptString.h:
        * bindings/js/WorkerScriptController.h:
        * bindings/objc/DOMImplementationFront.h:
        * bindings/v8/ScheduledAction.h:
        * bindings/v8/ScriptController.h:
        * bindings/v8/V8DOMWindowShell.h:
        * bindings/v8/V8Proxy.h:
        * bindings/v8/V8Utilities.h:
        * bindings/v8/custom/V8CustomXPathNSResolver.h:
        * bridge/c/c_utility.h:
        * css/CSSFontSelector.h:
        * css/CSSHelper.h:
        * css/CSSOMUtils.h:
        * css/CSSPrimitiveValue.h:
        * css/MediaList.h:
        * css/StyleBase.h:
        * css/StyleSheetList.h:
        * css/WebKitCSSKeyframesRule.h:
        * dom/CheckedRadioButtons.h:
        * dom/DOMImplementation.h:
        * dom/DocumentMarker.h:
        * dom/DynamicNodeList.h: